# genproto

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/client/: mod.rs
lib/: Cargo.toml
lib/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/server/: mod.rs
server/src/server/store/: mod.rs
src/: lib.rs
src/server/: mod.rs
src/server/store/: mod.rs
