[package]
name = "genproto"
version = "0.1.0"
authors = ["jrieck <jack.rieck@sendgrid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
